--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-torch
-transformers
-accelerate
-Pillow
-matplotlib
-sentencepiece
-protobuf
-sentence_transformers
-datasets
-torchvision
-opencv-python
-scipy
-scikit-learn
-pandas
+torch==2.2.2
+transformers==4.40.0
+accelerate==0.30.1
+Pillow==10.3.0
+matplotlib==3.9.0
+sentencepiece==0.2.0
+protobuf==3.19.6
+sentence-transformers==3.0.1
+datasets==2.19.0
+torchvision==0.17.2
+opencv-python==4.10.0.84
+scipy==1.13.0
+scikit-learn==1.4.2
+pandas==2.2.2
