--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 torch==2.2.2
 transformers==4.40.0
 accelerate==0.30.1
-Pillow==10.3.0
+pillow==10.3.0
 matplotlib==3.9.0
 sentencepiece==0.2.0
 protobuf==3.19.6
