--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,9 @@ run.py
 results**
 **6_valid**
 **50_samples**
-**total_mean_error_**
+**slurm**
+**output.log**
+**debug.log**
+**wandb**
+finetune_**
+.cache**
